Added engage/disengage REST API and BT remote support
